docs/tests/typing/bad/testfile-if-1.cpp
void foo() {}
int main() { if(foo()); }
